src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Contact.AccountId</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approval_Level__c</fullName>
        <description>Field moved to Approval Matrix table</description>
        <label>Approval Level_OBSOLETE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
                <value>
                    <fullName>Level 5</fullName>
                </value>
                <value>
                    <fullName>Level 6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Next_Level_Approver__c</fullName>
        <description>Field moved to Approval Matrix table</description>
        <label>Next Level Approver_OBSOLETE</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_CompanyCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Elevated_Access_End_Date__c</fullName>
        <label>Elevated Access End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Elevated_Access_Granted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elevated Access Granted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elevated_Access_Reason__c</fullName>
        <label>Elevated Access Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Authorization Issue</fullName>
                </value>
                <value>
                    <fullName>Batch job execution</fullName>
                </value>
                <value>
                    <fullName>Defect or Incident Resolution</fullName>
                </value>
                <value>
                    <fullName>Manual deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Elevated_Access_Reference__c</fullName>
        <label>Elevated Access Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Elevated_Access_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Elevated Access Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Controller_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Controller Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_Controller_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Finance Controller Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finance_Controller__c</fullName>
        <description>The users who approves Payment Terms and Finance opportunities</description>
        <label>Finance Controller</label>
        <relationshipName>Finance_Controller</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Forwarding_Partner_Number__c</fullName>
        <label>Forwarding Partner Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Object_ID__c</fullName>
        <description>Azure Object ID of Manager</description>
        <label>Azure Manager Object ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_ID__c</fullName>
        <description>Azure ID reference</description>
        <label>Azure Object ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Original_Profile_Assignment__c</fullName>
        <label>Original Profile Assignment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Privileged_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privileged User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TS_NOTReceiveCaseEmailNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>&lt;TS Used for sending or not  Case owner emails for newly arriving Case Emails via Email to Case&gt;. [Created by: &lt;Bas&gt; &lt;Hoeberigs&gt; - &lt;CREATED DATE 01.11.2017&gt;]</description>
        <inlineHelpText>When Checked it will  NOT send Email notification to user when he is the owner of  Case and a new email arrived on the Case</inlineHelpText>
        <label>No Case Email Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Allow_Delegated_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box so that others in this Salesforce organization can send Adobe Sign agreements on behalf of this user.</description>
        <inlineHelpText>Check this box so that others in this Salesforce organization can send Adobe Sign agreements on behalf of this user.</inlineHelpText>
        <label>Adobe Sign Allow Sending As Other Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that the user&apos;s email address has been validated in Adobe Sign API.</description>
        <inlineHelpText>This checkbox indicates that the user&apos;s email address has been validated in Adobe Sign API.</inlineHelpText>
        <label>Adobe Sign Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_MID__c</fullName>
        <label>Default MID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Users_1</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>SALES.CONTACT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Users_Active</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Users Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BE_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Organization__c</field>
            <operation>equals</operation>
            <value>SAP_0333</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>BE Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Belgium</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Organization__c</field>
            <operation>equals</operation>
            <value>SAP_0333</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>end user</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>external</value>
        </filters>
        <label>Belgium</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Finance_approver</fullName>
        <columns>FULL_NAME</columns>
        <columns>Finance_Controller_Approver__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Finance_Controller_Approver__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Finance approver</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Integration</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>Integration</value>
        </filters>
        <label>Integration</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Integration_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>Integration</value>
        </filters>
        <label>Integration Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NL</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Organization__c</field>
            <operation>equals</operation>
            <value>SAP_0111</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
        </filters>
        <label>NL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NL_Operators</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Organization__c</field>
            <operation>equals</operation>
            <value>SAP_0111</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>NL - Operations - Operator</value>
        </filters>
        <label>NL Operators</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sweden_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Organization__c</field>
            <operation>equals</operation>
            <value>SAP_0976</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Sweden Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>accenture</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>info.vaxjo@jobmeal.se</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>accenture mail</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>country_manager</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>country manager</value>
        </filters>
        <label>country manager</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>z_Desmond_Test</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>notContain</operation>
            <value>qas,invalid</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>z Desmond Test</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>DevOps_Profile_Validation</fullName>
        <active>true</active>
        <description>Users with DevOps profile will not be able to edit user details.</description>
        <errorConditionFormula>AND($Setup.ValidationRulesSettings__c.UsersValidationRule__c = true , $Profile.Name  = &quot;JDE - DevOps Profile&quot; )</errorConditionFormula>
        <errorDisplayField>EmailPreferences</errorDisplayField>
        <errorMessage>Editing user details is restricted for JDE-DevOps Profile</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Elevated_Access_Reason</fullName>
        <active>false</active>
        <description>Verifies that a reason is provided when requesting elevated access (SYSTEM ADMINISTRATOR PROFILE)</description>
        <errorConditionFormula>AND( CONTAINS( UPPER(Profile.Name), &quot;SYSTEM ADMINISTRATOR&quot;),ISPICKVAL( Elevated_Access_Reason__c,&quot;&quot;), NOT(Privileged_User__c))</errorConditionFormula>
        <errorMessage>Please provide a reason for requesting elevated access</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Elevated_Access_Reference</fullName>
        <active>false</active>
        <description>Verifies that a reference is provided when requesting elevated access (SYSTEM ADMINISTRATOR PROFILE)</description>
        <errorConditionFormula>AND( CONTAINS(UPPER(Profile.Name), &quot;SYSTEM ADMINISTRATOR&quot;),ISBLANK( Elevated_Access_Reference__c),NOT(Privileged_User__c))</errorConditionFormula>
        <errorMessage>Please provide a reference (defect, incident, task) for requesting elevated access</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Privileged_Access_Manager</fullName>
        <active>false</active>
        <description>Verifies that only users with the custom permission UAM_Privileged_Access_Manager can assign the privileged access on a permanent basis</description>
        <errorConditionFormula>AND( NOT($Permission.UAM_Privileged_Access_Manager), Privileged_User__c)</errorConditionFormula>
        <errorMessage>Only Privileged Access Managers can set the Privileged User checkbox to true</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_System_Admin</fullName>
        <active>false</active>
        <description>Prevents the assignment of the SYSTEM ADMINISTRATOR profile during user creation. This is to prevent that there is no original profile to revert back to after the temporary assignment</description>
        <errorConditionFormula>AND(CONTAINS(UPPER(Profile.Name), &quot;SYSTEM ADMINISTRATOR&quot;),ISNEW(),NOT(Privileged_User__c))</errorConditionFormula>
        <errorMessage>You cannot assign the System Administrator profile during user creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_edit_for_end_users</fullName>
        <active>true</active>
        <description>first, middle or last name, alias, email or nick name should not be editable for end users. It could only be edited by system administrators, functional testers and on creation</description>
        <errorConditionFormula>AND($Setup.ValidationRulesSettings__c.UsersValidationRule__c,
OR(
ISCHANGED( FirstName ),
ISCHANGED( MiddleName ),
ISCHANGED( LastName ),
ISCHANGED( Alias ),
ISCHANGED( Email ),
ISCHANGED( CommunityNickname )
),
$Profile.Name != &apos;System Administrator&apos;, $Profile.Name != &apos;JDE-Admin-Functional Tester&apos;, $Profile.Name != &apos;JDE-Admin-User Administrator&apos;,
NOT(ISNEW())
)</errorConditionFormula>
        <errorMessage>It is not allowed to change the first name, middle name, last name, alias, email or nick name. Please contact a system administrator in case you require a change of any of these fields.</errorMessage>
    </validationRules>
</CustomObject>